--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@ float: right;
 			</div>
 			<div class="author">
 				<div class="author-card"><img class="img-circle" src="images/portrait.jpg"></div>
-				<div class="author-info"><div>Sayi</div>
-				<div>adasai90@gmail.com</div>
+				<div class="author-info"><div>Sayi    adasai90@gmail.com</div>
+				<div>说点无关的事，自娱且乐</div>
 				<div><a href="http://weibo.com/sayihorse" class="btn btn-follow">Follow</a></div>
 				</div>
 			</div>
