--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@ float: right;
 					$(this).addClass('selected');
 					
 					$(".choice").hide();
+					//$("body").toggleClass("bg");
 					$("#" + $(this).data('show')).fadeIn();
 				}
 				
