--- a/article/ant/ant.html
+++ b/article/ant/ant.html
@@ -6,12 +6,14 @@
 <meta name="viewport"
     content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="stylesheet" href="../../stylesheets/styles.css">
+<link rel="stylesheet" href="../../stylesheets/font-awesome.min.css">
 <link rel="stylesheet" href="../../stylesheets/page.css">
 <link href="../../javascripts/google-code-prettify/prettify.css" type="text/css" rel="stylesheet" />
 <script src="../../javascripts/google-code-prettify/prettify.js"></script>
 <title>Ant 使用</title>
 </head>
 <body onload="prettyPrint()">
+<div class="fix-right-top switch-bg"><i class="icon-adjust"></i></div>
 <article>
 <h1>
 <a name="apache-ant" class="anchor" href="#apache-ant"><span class="octicon octicon-link"></span></a>Apache Ant</h1>
@@ -284,5 +286,13 @@ jython.jar：Python with script task  </p>
 </code></pre>
 
 </ARTICLE>
+<script src="../../javascripts/jquery-1.8.0.min.js"></script>
+<script type="text/javascript">
+    $(function(){
+        $(".switch-bg").click(function(){
+            $("body").toggleClass("bg");
+        });
+    })
+</script>
 </body>
 </html>
