--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ float: right;
 					
 					<ul>
 						<li><a href="article/ant/ant.html">Ant的使用</a></li>
-						<li><a href="javascript:;">Maven</a></li>
+						<li><a href="article/maven/maven.html">Maven</a></li>
 					</ul>
 				</div>
 			</div>
