--- a/index.html
+++ b/index.html
@@ -87,8 +87,17 @@ float: right;
 				<div class="category-links">
 					<ul>
 						<li><a href="javascript:;">Apache DS以及浏览管理工具</a></li>
-						<li><a href="javascript:;">Apache Directory LDAP API</a></li
+						<li><a href="javascript:;">Apache Directory LDAP API</a></li>
 						<li><a href="javascript:;">Spring Ldap 参考</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="category">
+				<div class="category-title">OAuth2 Protocol</div>
+				<div class="category-links">
+					<ul>
+						<li><a href="article/oauth2/oauth2-client4j.html">OAuth2 client</a></li>
+						<li><a href="javascript:;">OAuth2 server</a></li>
 					</ul>
 				</div>
 			</div>
@@ -168,8 +177,8 @@ float: right;
 					
 					<ul>
 						<li><a href="javascript:;">连接池C3P0、Druid及实现原理</a></li>
-						<li><a href="article/mysql/index.html">MYSQL 记录</a></li>
-						<li><a href="javascript:;">DB2 初使用</a></li>
+						<li><a href="article/mysql/index.html">MYSQL 中文文档记录</a></li>
+						<li><a href="javascript:;">DB2的使用(oracle向db2迁移)</a></li>
 						<li><a href="javascript:;">Oracle</a></li>
 					</ul>
 				</div>
