--- a/article/oauth2/oauth2-client4j.html
+++ b/article/oauth2/oauth2-client4j.html
@@ -12,7 +12,7 @@
 <script src="../../javascripts/google-code-prettify/prettify.js"></script>
 <title>Oauth2-client4j doc</title>
 </head>
-<body onload="prettyPrint()">
+<body onload="prettyPrint()" class="english">
 <div class="fix-right-top switch-bg"><i class="icon-adjust"></i></div>
 <article>
 
