--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ float: right;
 				<div class="category-title">OAuth2 Protocol</div>
 				<div class="category-links">
 					<ul>
-						<li><a href="article/oauth2/oauth2-client4j.html">OAuth2 client</a></li>
+						<li><a href="article/oauth2/oauth2-client4j.html">OAuth2-client4j tutorial</a></li>
 						<li><a href="javascript:;">OAuth2 server</a></li>
 					</ul>
 				</div>
