--- a/article/oauth2/oauth2-client4j.html
+++ b/article/oauth2/oauth2-client4j.html
@@ -17,17 +17,22 @@
 <article>
 
 <h1 id="oauth2-client4j">Oauth2 client4j</h1>
-<p>OAuth2 client for Java,beased on Apache Oltu,
-implements the OAuth 2.0 protocol for authentication and authorization.</p>
+<p>OAuth2 client for Java,based on Apache Oltu and scribe-java,implements the OAuth 2.0 protocol for authentication and authorization.</p>
 <h2 id="why-oauth2-client4j">Why oauth2-client4j?</h2>
 <p>want to code easier,extend easier.  </p>
 <h2 id="download-and-maven">Download and Maven</h2>
+<p>OAuth2-client4j replace jettison with fastjson,just put <code>fastjson.jar,oauth2-client4j.jar</code> in your lib folder.
+if you use Maven,add Maven dependency:  </p>
+<p>xml
+    <dependency>
+        <groupId>org.oauth2.client</groupId>
+        <artifactId>oauth2-client4j</artifactId>
+        <version>0.0.1</version>
+    </dependency></p>
 <h2 id="usage">Usage</h2>
 <p>OAuth 2.0 is a relatively simple protocol,
-you should register your application with the servers provider and request to get <strong>access_token</strong> 
-which can be send to the provider's API that you want to access.<br />
-This example shows how to receive an access token from Google.<br />
-step 1. Build OAuth2 Service  </p>
+you should register your application with the servers provider and request to get <strong>access_token</strong> which can be send to the provider's API that you want to access.This example shows how to receive an access token from Google.</p>
+<h4 id="step-1-build-oauth2-service">step 1. Build OAuth2 Service</h4>
 <!--?prettify lang=java?-->
 
 <pre><code>OAuthService service = new OAuthServiceBuilder()
@@ -37,23 +42,24 @@ step 1. Build OAuth2 Service  </p>
                 .callback(REDIRECT_URL)
                 .build();
 </code></pre>
-<p>step 2. Send an Authentication Request  </p>
+<h4 id="step-2-send-an-authentication-request">step 2. Send an Authentication Request</h4>
 <!--?prettify lang=java?-->
 
-<pre><code>service.getAuthorizationUrl();
+<pre><code>service.getAuthorizationRequest().getLocationUri();
 </code></pre>
-<p>step 3. Get Authorization Code from redirect URI
-depend your application,native、app or web.For web,you can just get parameter like this:</p>
+<h4 id="step-3-get-authorization-code-from-redirect-uri">step 3. Get Authorization Code from redirect URI</h4>
+<p>depend your application,native、app or web.For web,you can just get parameter like this:</p>
 <!--?prettify lang=java?-->
 
 <pre><code>String code = request.getParamert("code");
 </code></pre>
-<p>step 4. Exchange OAuth2 Code for Access Token
-default,return the json Response:</p>
+<h4 id="step-4-exchange-oauth2-code-for-access-token">step 4. Exchange OAuth2 Code for Access Token</h4>
+<p>default,return the json Response:</p>
 <!--?prettify lang=java?-->
 
-<pre><code>OAuthJSONAccessTokenResponse oAuthResponse = service.accessToken(code);
-oAuthResponse.getAccessToken();
+<pre><code>GoogleAccessTokenResponse response = serviceGoogle.accessToken(code,
+            GoogleAccessTokenResponse.class);
+response.getAccessToken();
 </code></pre>
 <h2 id="additional-features">Additional features</h2>
 <ul>
@@ -61,42 +67,39 @@ oAuthResponse.getAccessToken();
 </ul>
 <!--?prettify lang=java?-->
 
-<pre><code>    service.attachAuthParam(PARAM_KEY,PARAM_VAL).getAuthorizationUrl();
+<pre><code>    service.getAuthorizationRequest().addParameter(PARAM_KEY,PARAM_VAL).getLocationUri();
 </code></pre>
 <ul>
 <li>Provide universal method to parse authorization code </li>
 </ul>
 <!--?prettify lang=java?-->
 
-<pre><code>    OAuthAuthzResponse oar = OAuthAuthzResponse.oauthCodeAuthzResponse(request);
-    String code = oar.getCode();
+<pre><code>    ~~~~
 </code></pre>
 <ul>
-<li>Provide custom response readers to extract access_token or more
-two ways:  </li>
-<li>implement your response class,and pass parameter to get access token:  </li>
+<li>Provide custom response readers to extract access_token or more,two ways:  </li>
+</ul>
+<p>1.implement your response class,and pass parameter to get access token:  </p>
+<!--?prettify lang=java?-->
+
+<pre><code>    GoogleAccessTokenResponse response = serviceGoogle.accessToken(code,
+            GoogleAccessTokenResponse.class);
+</code></pre>
+<p>2.every provider class,like GoogleProvider.class,have method:  </p>
+<!--?prettify lang=java?-->
+
+<pre><code>    public Class&lt;? extends OAuthResponse&gt; getAccessTokenResponseClass(){}
+</code></pre>
+<p>just return the  response class and code like this: <code>SinaWeiboAccessTokenResponse response = (SinaWeiboAccessTokenResponse) service.accessToken(code);</code>,
+default response is OAuthJSONAccessTokenResponse.</p>
+<ul>
+<li>Use your own HTTP client</li>
 </ul>
 <!--?prettify lang=java?-->
 
-<pre><code>    GitHubTokenResponse response = service.accessToken(code, GitHubTokenResponse.class);
+<pre><code>    new OAuthServiceBuilder().customHttpClinet(client);
 </code></pre>
-<ol>
-<li>
-<p>every provider class,like GoogleProvider.class,have method:  </p>
-<pre><code>OAuthClientResponse getAccessTokenResponse(){}
-</code></pre>
-<p>just return the  response class and code like this: <code>service.accessToken(code)</code>,
-if return null,default response is OAuthJSONAccessTokenResponse.</p>
-</li>
-<li>
-<p>Use your own HTTP client</p>
-</li>
-</ol>
-<!--?prettify lang=java?-->
-
-<pre><code>    service.customHttpClinet(client).accessToken(code);
-</code></pre>
-<h2 id="extend">extend</h2>
+<h2 id="extend">Extend</h2>
 <ul>
 <li>add new provider class to use powerful func  </li>
 </ul>
@@ -104,17 +107,10 @@ if return null,default response is OAuthJSONAccessTokenResponse.</p>
 
 <pre><code>    .provider(new Provider(){...})
 </code></pre>
-<ul>
-<li>an universal usage---do not want to add new provider class for standard oauth2 protocol</li>
-</ul>
-<!--?prettify lang=java?-->
-
-<pre><code>    .provider(GoogleProvider.class) -----&gt; .authorizationLocation(AUTH_URL).tokenLocation(TOKEN_URL)
-</code></pre>
 <p>use</p>
 <!--?prettify lang=java?-->
 
-<pre><code>    service.accessToken(code, requestType, ResponseClass.class)`
+<pre><code>    JSONAccessTokenResponse response = service.accessJsonToken(code);
 </code></pre>
 
 </ARTICLE>
