--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@ float: right;
 					
 					<ul>
 						<li><a href="javascript:;">连接池C3P0、Druid及实现原理</a></li>
-						<li><a href="article/mysql/index.html">MYSQL 中文文档记录</a></li>
-						<li><a href="javascript:;">DB2的使用(oracle向db2迁移)</a></li>
+						<li><a href="article/database/index.html">MYSQL 中文文档记录</a></li>
+						<li><a href="article/database/db2.html">DB2的使用(oracle向db2迁移)</a></li>
 						<li><a href="javascript:;">Oracle</a></li>
 					</ul>
 				</div>
