--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ float: right;
 					<ul>
 						<li><a href="javascript:;">Apache DS以及浏览管理工具</a></li>
 						<li><a href="javascript:;">Apache Directory LDAP API</a></li>
-						<li><a href="javascript:;">Spring Ldap 参考</a></li>
+						<li><a href="article/LDAP/Spring ldap.html">Spring Ldap 参考</a></li>
 					</ul>
 				</div>
 			</div>
@@ -197,10 +197,9 @@ float: right;
 			<div class="category">
 				<div class="category-title">项目构建 </div>
 				<div class="category-links">
-					
 					<ul>
 						<li><a href="article/ant/ant.html">Ant的使用</a></li>
-						<li><a href="article/maven/maven.html">Maven</a></li>
+						<li><a href="article/maven/maven.html">Maven 参考</a></li>
 					</ul>
 				</div>
 			</div>
