--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ float: right;
 					<ul>
 						<li><a href="javascript:;">Apache DS以及浏览管理工具</a></li>
 						<li><a href="javascript:;">Apache Directory LDAP API</a></li>
-						<li><a href="article/LDAP/Spring ldap.html">Spring Ldap 参考</a></li>
+						<li><a href="article/LDAP/spring ldap.html">Spring Ldap 参考</a></li>
 					</ul>
 				</div>
 			</div>
