--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ float: right;
 						<li><a href="javascript:;">Spring Exception</a></li>
 						<li><a href="javascript:;">Spring international</a></li>
 						<li><a href="javascript:;">Spring File Upload</a></li>
-						<li><a href="javascript:;">Spring Theme</a></li>
+						<li><a href="article/spring/spring-theme.html">Spring Theme</a></li>
 						<li><a href="javascript:;">Spring Validation</a></li>
 						<li><a href="javascript:;">Spring Model、Request、Response、Session、Flash attribute</a></li>
 						<li><a href="article/spring/aop-pointcut-bean.html">AOP：AspectJ pointcut designators---bean</a></li>
@@ -217,7 +217,7 @@ float: right;
 			<div class="author">
 				<div class="author-card"><img class="img-circle" src="images/portrait.jpg"></div>
 				<div class="author-info"><div>Sayi    adasai90@gmail.com</div>
-				<div>说点无关的事，自娱且乐</div>
+				<div></div>
 				<div><a href="http://weibo.com/sayihorse" class="btn btn-follow">Follow</a></div>
 				</div>
 			</div>
