--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ float: right;
 						<li><a href="javascript:;">Spring JDBC</a></li>
 						<li><a href="javascript:;">Spring Transactional</a></li>
 						<li><a href="javascript:;">Spring Exception</a></li>
-						<li><a href="javascript:;">Spring international</a></li>
+						<li><a href="article/spring/spring-international.html">Spring international</a></li>
 						<li><a href="article/spring/spring-file-upload.html">Spring File Upload</a></li>
 						<li><a href="article/spring/spring-theme.html">Spring Theme</a></li>
 						<li><a href="javascript:;">Spring Validation</a></li>
