--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
+<link href="favicon.ico" type="image/x-icon" rel=icon>
+<link href="favicon.ico" type="image/x-icon" rel="shortcut icon">
 <title>deepoove</title>
 </head>
 <body style="font: 14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;">
