--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
+<meta http-equiv="Cache-Control" content="no-siteapp" />
+<meta name="keywords" content="deepoove">
 <link href="favicon.ico" type="image/x-icon" rel=icon>
 <link href="favicon.ico" type="image/x-icon" rel="shortcut icon">
-<title>deepoove</title>
+<title>Deepoove</title>
 </head>
 <body style="font: 14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;">
 	<div class="wrapper">
