--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
 		<div style="  text-align: center;margin:120px auto;">
 			<img src="images/iconfont-chair.png" alt="" width="100px">
 			<p>Deeply in love with the things you love</p>
+			<p>(深爱你所爱)</p>
 			<p>just deepoove.</p>
-			<p>(深爱着你所爱)</p>
-			<!-- <p style="color:#000;font-size:18px;letter-spacing: 8px;line-height: 32px;font-weight:400;">	一个基于docx的word模板渲染组件
-			</p>
-			<a href="poi-tl" style="text-decoration: none;color: #9d55b8;padding: 5px 15px;background-color: #;border-radius: 4px;">Document</a> -->
 		</div>
 	</div>
 </body>
