--- a/Sayi/android/volley.html
+++ b/Sayi/android/volley.html
@@ -13,6 +13,9 @@
 <title>Volley 源码设计</title>
 </head>
 <body onload="prettyPrint()" class="bg">
+<div style='margin:0 auto;width:0px;height:0px;overflow:hidden;'>
+    <img src="../../images/icecream.png" width='700'>
+  </div>
 <div class="fix-right-top switch-bg"><i class="icon-adjust"></i></div>
 <article>
 Volley是一个由Google开发的Http网络库，让Android的网络操作更简单，更快。具有以下特点：</h3>
