--- a/Sayi/android/volley.html
+++ b/Sayi/android/volley.html
@@ -13,8 +13,8 @@
 <title>Volley 源码设计</title>
 </head>
 <body onload="prettyPrint()" class="bg">
-<div style='margin:0 auto;width:0px;height:0px;overflow:hidden;'>
-    <img src="../../images/icecream.png" width='700'>
+<div style='display: none;'>
+    <img src="http://deepoove.com/images/http_request.jpg" width='500'>
   </div>
 <div class="fix-right-top switch-bg"><i class="icon-adjust"></i></div>
 <article>
