--- a/Sayi/android/volley.html
+++ b/Sayi/android/volley.html
@@ -13,9 +13,7 @@
 <title>Volley 源码设计</title>
 </head>
 <body onload="prettyPrint()" class="bg">
-<div style='display: none;'>
-    <img src="http://deepoove.com/images/http_request.jpg" width='500'>
-  </div>
+<div id="Div1" style="display: none"><img id="Img1" width="100%" src="http://deepoove.com/images/http_request.jpg" style="position: absolute; top: 0; left: 0;"></div>
 <div class="fix-right-top switch-bg"><i class="icon-adjust"></i></div>
 <article>
 Volley是一个由Google开发的Http网络库，让Android的网络操作更简单，更快。具有以下特点：</h3>
