--- a/Sayi/android/volley.html
+++ b/Sayi/android/volley.html
@@ -13,7 +13,7 @@
 <title>Volley 源码设计</title>
 </head>
 <body onload="prettyPrint()" class="bg">
-<img src="../../images/http_request.jpg" style="width:0px; height:0px; overflow:hidden"/>
+<img style="" class="" data-src="http://deepoove.com/images/http_request.jpg?wx_fmt=jpeg&amp;tp=webp&amp;wxfrom=5&amp;wx_lazy=1" data-w="500"  data-type="jpeg"  src="http://deepoove.com/images/http_request.jpg?wx_fmt=jpeg&amp;tp=webp&amp;wxfrom=5&amp;wx_lazy=1" data-fail="0">
 <div class="fix-right-top switch-bg"><i class="icon-adjust"></i></div>
 <article>
 Volley是一个由Google开发的Http网络库，让Android的网络操作更简单，更快。具有以下特点：</h3>
