--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 <style type="text/css">
 ul{
 list-style: none;
+
 }
 ul li{
-margin-bottom: 5px;
-font-family: 'Comic Sans MS';
-font-size: 1.1em;
+margin: 5px;
+display: inline;
+
 }
 h3{
 font-family: 'Comic Sans MS';
@@ -29,6 +30,7 @@ font-size: 1.4em;
 }
 ul{
 margin: 0;
+padding: 0;
 }
 
 header{
@@ -68,9 +70,13 @@ float:none;
             </h3>
         </header>
         <footer>
-            <a href="https://github.com/Sayi">GitHub</a>
-            <a href="https://github.com/Sayi/sayi.github.com/issues">Blog</a>
-            &copy;deepoove.com
+        <ul>
+            <li><a href="https://github.com/Sayi/poi-tl">poi-tl</a></li>
+            <li><a href="https://github.com/Sayi/swagger-diff">Swagger-diff</a></li>
+            <li><a href="https://github.com/Sayi">GitHub</a></li>
+            <li><a href="https://github.com/Sayi/sayi.github.com/issues">Blog</a></li>
+            <li>&copy;deepoove.com</li>
+        </ul>
         </footer>
         
     </div>
