--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ display: inline;
 
 }
 h3{
-font-family: 'Comic Sans MS';
-font-size: 1.4em;
+    font:1.4em/1.2 Comic Sans MS, fantasy, serif;
+
 }
 ul{
 margin: 0;
