--- a/index.html
+++ b/index.html
@@ -467,6 +467,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <dd>
 <p>个人GitHub主页。</p>
 </dd>
+<dt class="hdlist1"><a href="">Evoopeed中文</a></dt>
+<dd>
+<p>个人微信公众号，专注于Java技术，请搜索微信号：deepoove</p>
+</dd>
 </dl>
 </div>
 <div class="paragraph">
