--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </dd>
 <dt class="hdlist1"><a href="">Evoopeed中文</a></dt>
 <dd>
-<p>个人微信公众号，专注于Java技术，请搜索微信号：deepoove</p>
+<p>个人公众号，专注于Java技术，请搜索微信号：deepoove。</p>
 </dd>
 </dl>
 </div>
