--- a/index.html
+++ b/index.html
@@ -451,18 +451,15 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <dd>
 <p>Word模板引擎，提供通过极简的代码操作Word模板的能力。</p>
 </dd>
-<dt class="hdlist1"><a href="https://github.com/Sayi/swagger-dubbo">swagger-dubbo</a></dt>
+<dt class="hdlist1"><a href="https://authsaur.deepoove.com">authsaur</a></dt>
 <dd>
-<p>阿里巴巴微服务框架Dubbo与Rest文档工具Swagger的结合。</p>
+<p>开箱即用的企业单点登录。</p>
 </dd>
 <dt class="hdlist1"><a href="http://deepoove.com/swagger-diff/">swagger-diff</a></dt>
 <dd>
-<p>Compare two swagger API specifications. 接口文档的比较工具。</p>
+<p>Compare two swagger API specifications. </p>
 </dd>
-<dt class="hdlist1"><a href="http://deepoove.com/github-blog">GitHub博客 Android APP</a></dt>
-<dd>
-<p>基于GitHub Issues构建的一个Android应用。</p>
-</dd>
+
 <dt class="hdlist1"><a href="https://github.com/Sayi">GitHub</a></dt>
 <dd>
 <p>个人GitHub主页。</p>
