--- a/index.html
+++ b/index.html
@@ -482,7 +482,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
         <p>&#169; deepoove.com 版权所有</p>
         <p><a href="https://beian.miit.gov.cn/" target="_blank"
                 style="color: #fff;text-decoration:none">浙ICP备2023020961号-1</a></p>
+                <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=33011002017252" style="display:inline-block;text-decoration:none;"><img src="beian.png" style="float:left;"/><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 0px; color:#fff;">浙公网安备 33011002017252号</p></a>
     </div>
+
 </div>
 </div>
 </body>
