--- a/index.html
+++ b/index.html
@@ -434,52 +434,25 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </head>
 <body class="article">
 <div id="header">
-<h1>卅一</h1>
-<div class="details">
-<span id="author" class="author">Sayi-sayi90@163.com</span><br>
-</div>
+    <h1>Sayi</h1>
+    <div class="details">
+        <span id="author" class="author">sayi90@163.com</span><br>
+    </div>
 </div>
 <div id="content">
-<div class="quoteblock">
+
+<div class="quoteblock" style="margin: 200px 0px">
 <blockquote>
 希望是一个好东西，也许是最好的。
 </blockquote>
 </div>
-<div class="dlist">
-<dl>
-<dt class="hdlist1"><a href="http://deepoove.com/poi-tl/">poi-tl</a></dt>
-<dd>
-<p>Java中最好的Word模板引擎。</p>
-</dd>
-<dt class="hdlist1"><a href="https://authsaur.deepoove.com">authsaur</a></dt>
-<dd>
-<p>开箱即用的企业单点登录。</p>
-</dd>
-<dt class="hdlist1"><a href="http://deepoove.com/swagger-diff/">swagger-diff</a></dt>
-<dd>
-<p>Compare two swagger API specifications. </p>
-</dd>
-<dt class="hdlist1"><a href="https://github.com/Sayi/swagger-dubbo">swagger-dubbo</a></dt>
-<dd>
-    <p>阿里巴巴微服务框架Dubbo与Rest文档工具Swagger的结合。</p>
-    </dd>
 
-<dt class="hdlist1"><a href="https://github.com/Sayi">GitHub</a></dt>
-<dd>
-<p>个人GitHub主页。</p>
-</dd>
-<dt class="hdlist1"><a href="">Evoopeed</a></dt>
-<dd>
-<p>个人公众号，专注于Java技术，请搜索微信号：deepoove。</p>
-</dd>
-</dl>
-</div>
 <div class="paragraph">
 
 </div>
-<div id="paragraph">
-    <div id="footer-text1">
-        &#169; deepoove.com
+<div id="paragraph" >
+    <div id="footer-text1" >
+        &#169; deepoove.com「Love what you love deeply」
         &nbsp;&nbsp;&nbsp;&nbsp; <a href="https://beian.miit.gov.cn/" target="_blank"
             style="color: #444;text-decoration:none">浙ICP备2023020961号-1</a>
             &nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=33011002017252"
