--- a/index.html
+++ b/index.html
@@ -431,26 +431,14 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 #footer-text{color:rgba(0,0,0,.6);font-size:.9em}}
 @media amzn-kf8{#header,#content,#footnotes,#footer{padding:0}}
 </style>
+<script>
+        window.onload = function() {
+            window.location.href = "https://deepoove.com/poi-tl/";
+            
+        };
+    </script>
 </head>
 <body class="article">
-<div id="header">
-    <h1>Sayi</h1>
-    <div class="details">
-        <span id="author" class="author">sayi90@163.com</span><br>
-    </div>
-</div>
-<div id="content">
 
-<div class="quoteblock" style="margin: 200px 0px">
-<blockquote>
-希望是一个好东西，也许是最好的。
-</blockquote>
-</div>
-
-<div class="paragraph">
-
-</div>
-
-</div>
 </body>
 </html>
